# trove-extension

./: .gitignore
_server/: Dockerfile  fly.toml  package-lock.json  package.json
_server/src/: app.ts  controller.ts  model.ts
_server/src/service/: collection.ts  product.ts  user.ts
extension/: .eslintrc.cjs  bun.lockb  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
extension/public/: content.js  manifest.json
extension/src/: App.css  App.jsx  Layout.jsx  main.jsx
extension/src/components/: ActionBar.jsx  ActionButton.jsx  ActionMenu.jsx  AddToCollectionModal.jsx  AsyncButton.jsx  ButtonAction.jsx  ButtonAsync.jsx  ButtonMenu.jsx  Collection.jsx  CollectionItem.jsx  DeleteButton.jsx  EditButton.jsx  EditableField.jsx  Header.jsx  Input.jsx  ListItemCollection.jsx  ListItemProduct.jsx  Loading.jsx  MenuButton.jsx  NavBar.jsx  NavLink.jsx  ProductImage.jsx  ScrollToTop.jsx  Textarea.jsx
extension/src/context/: activeTabProduct.jsx  collections.jsx  products.jsx  session.jsx
extension/src/pages/: Account.jsx  ActiveTabProduct.jsx  CollectionAdd.jsx  CollectionDetails.jsx  CollectionEdit.jsx  CollectionList.jsx  CollectionPage.jsx  CollectionsPage.jsx  CreateCollection.jsx  EditCollection.jsx  EditItem.jsx  Home.jsx  ItemPage.jsx  Login.jsx  ProductDetails.jsx  ProductEdit.jsx  SignIn.jsx  SignUp.jsx  Trove.jsx  YourTrove.jsx
mobile/: app.json  bun.lockb  package.json
mobile/ios/: Podfile
mobile/ios/trove/: Info.plist
mobile/ios/trove.xcodeproj/: project.pbxproj
server/: pyproject.toml
server/src/: app.py
(+39 files in other folders)
